# MagiaMagica

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.repo.example.md  CLAUDE.repo.md  Cargo.toml  LICENSE  README.md  TODO.md
.claude/: Feedback.md  Progress.md  addf-Behavior.toml  addf-lock.json  launch.json
.claude/Progresses/: 2026-06-10-phase1.0-workspace-bootstrap.md  2026-06-10-phase1.1-ir-skeleton.md  2026-06-10-phase1.2-syn-to-ir.md  2026-06-11-phase1.3-aux-rings.md  2026-06-11-phase1.4-summon-effects.md  2026-06-11-phase1.5-layout-engine.md  2026-06-11-phase1.6-svg-renderer-midchilda.md  2026-06-11-phase1.7-cli-integration.md  2026-06-11-phase1.8-layout-collision-avoidance.md  2026-06-11-phase2-planning.md  2026-06-11-phase2.0-spec-v0.2.md  2026-06-11-phase2.1-dev-server.md  2026-06-11-phase2.2-layer-toggle.md  2026-06-11-phase2.3-filter-dsl.md  2026-06-11-phase2.4-transcript.md  2026-06-11-phase3-planning.md  2026-06-11-phase3.0-spec-v0.3.md  2026-06-11-phase3.1-diff-engine.md  2026-06-11-phase3.2-spell-diff.md  2026-06-11-phase3.3-ci-integration.md  2026-06-11-phase3.4-dataflow-ir.md  2026-06-11-phase3.5-belka-style.md  2026-06-11-phase4.0-source-paired-view.md  2026-06-11-phase4.0.5-frontend-foundation.md  2026-06-11-phase4.0.6-symbol-legend.md  2026-06-11-phase4.0.7-svg-to-vue-schema.md  2026-06-12-main-circle-args-display.md  2026-06-12-phase4.1-pinned-focus-view.md  2026-06-12-phase4.2-proximity-model.md  2026-06-12-phase4.3-composite-still-render.md  2026-06-12-phase4.3.7-diff-on-web.md  2026-06-12-phase4.4-call-jump.md  2026-06-12-phase4.4.5-entrypoint-on-web.md  2026-06-12-phase4.5-workspace-callgraph-M2pre.md  2026-06-12-phase4.5-workspace-overview-M1.md  2026-06-12-phase4.8-closure-rings-M2.md  2026-06-12-phase4.8-method-chain-M1.md  2026-06-12-signature-arc-overflow-fix.md  2026-06-12-ui-detail-fixes.md  2026-06-13-phase4.0.6-entry-sign-and-labels.md  (+1 more)
.claude/addfTools/: lint-template-sync.py
.claude/agents/: addf-code-review-agent.md  addf-knowhow-agent.md  addf-security-review-agent.md
.claude/commands/: addf-dev.md  addf-init.md  addf-knowhow-filter.md  addf-knowhow-index.md  addf-knowhow.md  addf-lint.md
.claude/hooks/: turn-reminder.sh
.claude/templates/: ExperienceTemplate.md  ProgressTemplate.addf.md
.github/workflows/: ci.yml  spell-diff.yml
crates/magia-cli/: Cargo.toml  build.rs
crates/magia-cli/src/: gitio.rs  main.rs  serve.rs  srcview.rs  ssr.rs
crates/magia-cli/tests/: cli_integration.rs  serve_integration.rs
crates/magia-core/: Cargo.toml
crates/magia-core/src/: diff.rs  filter.rs  lib.rs  metrics.rs  proximity.rs  transcript.rs
crates/magia-core/src/ir/: edge.rs  graph.rs  layers.rs  mod.rs  operation.rs  sigil.rs  source.rs
crates/magia-core/src/layout/: constants.rs  crossing.rs  mod.rs
crates/magia-core/src/render/: belka.rs  ir_export.rs  midchilda.rs  mod.rs  palette.rs
crates/magia-core/tests/: ir_round_trip.rs  layout_engine.rs  render_svg.rs
crates/magia-rust/: Cargo.toml
crates/magia-rust/examples/: dump_positions.rs  render_self.rs
crates/magia-rust/src/: allocator.rs  dataflow.rs  effects.rs  error.rs  index.rs  lib.rs  ring.rs  signature.rs  statement.rs  summon.rs
crates/magia-rust/tests/: belka_golden.rs  dataflow_extraction.rs  ir_export_cross_check.rs  layout_regression.rs  render_golden.rs  spell_diff.rs  transcript_golden.rs
crates/magia-rust/tests/fixtures/: async_io.rs  for_loop.rs  if_branch.rs  match_arms.rs  simple_compute.rs  unsafe_block.rs
crates/magia-rust/tests/fixtures/snapshots/: async_io.snap  belka_loop_accumulate.snap  dense_dispatch.snap  diff_overlay_process_order.snap  for_loop.snap  if_branch.snap  match_arms.snap  simple_compute.snap  transcript_async_await.snap  transcript_dense_dispatch.snap  transcript_medium_render_doc.snap  unsafe_block.snap
docs/guides/: agents.md  development-process.md
docs/images/: MagiaMagica Social Preview 4案（単体HTML）.html  MagiaMagica ロゴ（単体HTML）.html
docs/knowhow/: INDEX.addf.md  INDEX.md  clap-cli-integration-pattern.md  deterministic-layout-pattern.md  git-ci-integration-pattern.md  milestone-gated-ui-plan.md  mini-dsl-pattern.md  minimal-dev-server-pattern.md  multi-style-renderer-pattern.md  rust-cargo-workspace-bootstrap.md  rust-ir-skeleton-pattern.md  structural-diff-pattern.md  svg-deterministic-rendering.md  syn-visitor-patterns.md  viteplus-bun-frontend-bootstrap.md  vue-ssr-static-render.md
docs/mystical-ci/: spec-v0.1.md  tech-selection-v0.1.md
docs/plans/: phase1.1-ir-skeleton.md  (+38 more)
fixtures/: async_await.rs  ci_probe.rs  db_query.rs  dense_dispatch.rs  filesystem_read.rs  io_print.rs  loop_accumulate.rs  match_dispatch.rs  medium_render_doc.rs  network_fetch.rs  reduce_brightness.rs  result_chain.rs  simple_compute.rs  unsafe_ptr.rs
project-docs/: concept.md
scripts/: dev-web.sh  render-html-to-png.mjs  render-readme-variants.mjs  render-social-previews.mjs  spell-diff-report.sh
web/: index.html  package.json  playwright.config.ts  tsconfig.json  uno.config.ts  vite.config.ts
(+92 files in other folders)
