[workspace]
resolver = "2"
members = [
    "crates/magia-core",
    "crates/magia-rust",
    "crates/magia-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/fruitriin/MagiaMagica"
authors = ["fruitriin"]
keywords = ["visualization", "ast", "code-analysis", "magic-circle"]
categories = ["development-tools", "visualization"]
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
# プロジェクト名・ファンタジー語彙（MagiaMagica, Mystical, ミッドチルダ等）を多用するため許容
doc_markdown = "allow"
