[package]
name = "magia-cli"
description = "MagiaMagica command-line interface: render Rust functions as magic circles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "magia"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
magia-core = { path = "../magia-core", version = "0.1.0" }
magia-rust = { path = "../magia-rust", version = "0.1.0" }
notify = "8.2.0"
serde_json = "1.0.150"
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-fancy"] }
tiny_http = "0.12.0"

[dev-dependencies]
assert_cmd = "2.2.2"
