[package]
name = "magia-core"
description = "MagiaMagica core: IR, analysis, layout, and SVG rendering for code-as-magic-circle visualization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
