[package]
name = "magia-core"
description = "MagiaMagica core: IR, analysis, layout, and SVG rendering for code-as-magic-circle visualization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
kurbo = "0.13.1"
petgraph = "0.8.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
