[package]
name = "magia-rust"
description = "MagiaMagica Rust language adapter: converts Rust source to MagiaIR"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
magia-core = { path = "../magia-core", version = "0.1.0" }
