[package]
name = "magia-rust"
description = "MagiaMagica Rust language adapter: converts Rust source to MagiaIR"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
magia-core = { path = "../magia-core", version = "0.1.0" }
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
thiserror = "2"

[dev-dependencies]
insta = "1.47.2"
serde_json = "1"
